Sec9_Chap96-XX: upgraded SB to 3.5.8 and java to 21